group("root") {
  deps = [
    ":crypto_test",
  ]
}

executable("crypto_test") {
  sources = [
    "crypto/ssl/cfb256.c",
    "crypto/ssl/cfb256_wrapper.c",
    "crypto/ssl/rijndael.c",
    "crypto/rijndael.cc",
    "crypto/rijndael_test.cc",
    "crypto/p256_key_exchange.cc",
    "crypto/p256_key_exchange_test.cc",
    "crypto/just_fast_keying.cc",
    "crypto/nonce.cc",
    "crypto/handshake.cc",
    "net/darknet_auth.cc",
    "net/darknet_auth_test.cc",
    "debug/hexdump.cc",
  ]

  defines = [
    "_DEBUG",
    "DCHECK_ALWAYS_ON=1",
    "CLANG_ANALYZER=1",
  ]
  include_dirs = [
    "chrome",
    "third_party/boringssl/src/crypto",
  ]
  libs = [
    "pthread",
    "event",
    "icuuc"
  ]
  deps = [
    "//chrome",
    "//third_party/gtest",
    "//third_party/boringssl",
  ]
}

executable("test") {
  sources = [
    "test/dcheck.cc",
  ]
  defines = [
    "_DEBUG",
    "DCHECK_ALWAYS_ON=1",
    "CLANG_ANALYZER=1",
  ]
  include_dirs = [
    "chrome",
  ]
  deps = [
    "//chrome",
  ]
  libs = [
    "pthread",
  ]
}
