# Copyright 2015 The Subzone Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("root") {
  deps = [
    ":crypto_test",
  ]
}

executable("crypto_test") {
  sources = [
    "debug/hexdump.cc",
    "crypto/handshake.cc",
    "crypto/handshake_unittest.cc",
    "crypto/just_fast_keying.cc",
    "crypto/just_fast_keying_unittest.cc",
    "crypto/nonce.cc",
    "crypto/p256_key_exchange.cc",
    "crypto/p256_key_exchange_unittest.cc",
    "crypto/rijndael.cc",
    "crypto/rijndael_test.cc",
    "crypto/ssl/cfb256.c",
    "crypto/ssl/cfb256_wrapper.c",
    "crypto/ssl/rijndael.c",
    "net/darknet_auth.cc",
    "net/darknet_auth_unittest.cc",
  ]
  cflags = [ "-fno-exceptions" ]
  defines = [
    "_DEBUG",
    "USE_SYMBOLIZE",
    "DCHECK_ALWAYS_ON=1",
    "CLANG_ANALYZER=1",
  ]
  include_dirs = [
    "chromium",
    "third_party/boringssl/src/crypto",
  ]
  libs = [
    "pthread",
    "event",
    "icuuc"
  ]
  deps = [
    "//chromium",
    "//third_party/gtest",
    "//third_party/boringssl",
    "//third_party/cppcheck",
  ]
}
