cmake_minimum_required(VERSION 2.8.4)
project(subzone)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

include_directories(src/chrome)
include_directories(src/chrome/out/Default/gen)
include_directories(src/chrome/third_party/libevent/compat)

add_library(pthread SHARED IMPORTED)
add_library(event SHARED IMPORTED)
add_library(icuuc SHARED IMPORTED)
set_property(TARGET pthread PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libpthread.so)
set_property(TARGET event PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libevent.so)
set_property(TARGET icuuc PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libicuuc.so)

set(SOURCE_FILES
    src/chrome/base/containers/hash_tables.h
    src/chrome/base/debug/alias.cc
    src/chrome/base/debug/alias.h
    src/chrome/base/debug/debugger.h
    src/chrome/base/debug/debugger_posix.cc
    src/chrome/base/debug/leak_annotations.h
    src/chrome/base/debug/proc_maps_linux.h
    src/chrome/base/debug/stack_trace.cc
    src/chrome/base/debug/stack_trace.h
    src/chrome/base/debug/stack_trace_posix.cc
    src/chrome/base/debug/task_annotator.cc
    src/chrome/base/debug/task_annotator.h
    src/chrome/base/debug/trace_event.h
    src/chrome/base/debug/trace_event_impl.cc
    src/chrome/base/debug/trace_event_impl.h
    src/chrome/base/debug/trace_event_impl_constants.cc
    src/chrome/base/debug/trace_event_memory.cc
    src/chrome/base/debug/trace_event_memory.h
    src/chrome/base/debug/trace_event_synthetic_delay.cc
    src/chrome/base/debug/trace_event_synthetic_delay.h
    src/chrome/base/debug/trace_event_system_stats_monitor.h
    src/chrome/base/files/file.cc
    src/chrome/base/files/file.h
    src/chrome/base/files/file_enumerator.cc
    src/chrome/base/files/file_enumerator.h
    src/chrome/base/files/file_enumerator_posix.cc
    src/chrome/base/files/file_path.cc
    src/chrome/base/files/file_path.h
    src/chrome/base/files/file_path_constants.cc
    src/chrome/base/files/file_posix.cc
    src/chrome/base/files/file_posix_hooks_internal.h
    src/chrome/base/files/file_util.h
    src/chrome/base/files/file_util_posix.cc
    src/chrome/base/files/scoped_file.cc
    src/chrome/base/files/scoped_file.h
    src/chrome/base/json/json_parser.cc
    src/chrome/base/json/json_parser.h
    src/chrome/base/json/json_reader.cc
    src/chrome/base/json/json_reader.h
    src/chrome/base/json/json_string_value_serializer.cc
    src/chrome/base/json/json_string_value_serializer.h
    src/chrome/base/json/json_writer.cc
    src/chrome/base/json/json_writer.h
    src/chrome/base/json/string_escape.cc
    src/chrome/base/json/string_escape.h
    src/chrome/base/memory/aligned_memory.h
    src/chrome/base/memory/linked_ptr.h
    src/chrome/base/memory/raw_scoped_refptr_mismatch_checker.h
    src/chrome/base/memory/ref_counted.cc
    src/chrome/base/memory/ref_counted.h
    src/chrome/base/memory/ref_counted_memory.cc
    src/chrome/base/memory/ref_counted_memory.h
    src/chrome/base/memory/scoped_ptr.h
    src/chrome/base/memory/scoped_vector.h
    src/chrome/base/memory/shared_memory.h
    src/chrome/base/memory/shared_memory_posix.cc
    src/chrome/base/memory/singleton.cc
    src/chrome/base/memory/singleton.h
    src/chrome/base/memory/weak_ptr.cc
    src/chrome/base/memory/weak_ptr.h
    src/chrome/base/message_loop/incoming_task_queue.cc
    src/chrome/base/message_loop/incoming_task_queue.h
    src/chrome/base/message_loop/message_loop.cc
    src/chrome/base/message_loop/message_loop.h
    src/chrome/base/message_loop/message_loop_proxy.cc
    src/chrome/base/message_loop/message_loop_proxy.h
    src/chrome/base/message_loop/message_loop_proxy_impl.cc
    src/chrome/base/message_loop/message_loop_proxy_impl.h
    src/chrome/base/message_loop/message_pump.cc
    src/chrome/base/message_loop/message_pump.h
    src/chrome/base/message_loop/message_pump_default.cc
    src/chrome/base/message_loop/message_pump_default.h
    src/chrome/base/message_loop/message_pump_libevent.cc
    src/chrome/base/message_loop/message_pump_libevent.h
    src/chrome/base/message_loop/timer_slack.h
    src/chrome/base/metrics/bucket_ranges.cc
    src/chrome/base/metrics/bucket_ranges.h
    src/chrome/base/metrics/histogram.cc
    src/chrome/base/metrics/histogram.h
    src/chrome/base/metrics/histogram_base.cc
    src/chrome/base/metrics/histogram_base.h
    src/chrome/base/metrics/histogram_macros.h
    src/chrome/base/metrics/histogram_samples.cc
    src/chrome/base/metrics/histogram_samples.h
    src/chrome/base/metrics/sample_map.cc
    src/chrome/base/metrics/sample_map.h
    src/chrome/base/metrics/sample_vector.cc
    src/chrome/base/metrics/sample_vector.h
    src/chrome/base/metrics/sparse_histogram.cc
    src/chrome/base/metrics/sparse_histogram.h
    src/chrome/base/metrics/statistics_recorder.cc
    src/chrome/base/metrics/statistics_recorder.h
    src/chrome/base/metrics/stats_counters.cc
    src/chrome/base/metrics/stats_counters.h
    src/chrome/base/metrics/stats_table.cc
    src/chrome/base/metrics/stats_table.h
    src/chrome/base/numerics/safe_conversions.h
    src/chrome/base/numerics/safe_conversions_impl.h
    src/chrome/base/posix/eintr_wrapper.h
    src/chrome/base/process/process_handle.h
    src/chrome/base/process/process_handle_posix.cc
    src/chrome/base/process/process_metrics.h
    src/chrome/base/process/process_metrics_posix.cc
    src/chrome/base/profiler/alternate_timer.cc
    src/chrome/base/profiler/alternate_timer.h
    src/chrome/base/profiler/tracked_time.cc
    src/chrome/base/profiler/tracked_time.h
    src/chrome/base/strings/string16.cc
    src/chrome/base/strings/string16.h
    src/chrome/base/strings/string_number_conversions.cc
    src/chrome/base/strings/string_number_conversions.h
    src/chrome/base/strings/string_piece.cc
    src/chrome/base/strings/string_piece.h
    src/chrome/base/strings/string_split.cc
    src/chrome/base/strings/string_split.h
    src/chrome/base/strings/string_tokenizer.h
    src/chrome/base/strings/string_util.cc
    src/chrome/base/strings/string_util.h
    src/chrome/base/strings/string_util_constants.cc
    src/chrome/base/strings/string_util_posix.h
    src/chrome/base/strings/stringprintf.cc
    src/chrome/base/strings/stringprintf.h
    src/chrome/base/strings/sys_string_conversions.h
    src/chrome/base/strings/sys_string_conversions_posix.cc
    src/chrome/base/strings/utf_offset_string_conversions.cc
    src/chrome/base/strings/utf_offset_string_conversions.h
    src/chrome/base/strings/utf_string_conversion_utils.cc
    src/chrome/base/strings/utf_string_conversion_utils.h
    src/chrome/base/strings/utf_string_conversions.cc
    src/chrome/base/strings/utf_string_conversions.h
    src/chrome/base/synchronization/cancellation_flag.cc
    src/chrome/base/synchronization/cancellation_flag.h
    src/chrome/base/synchronization/condition_variable.h
    src/chrome/base/synchronization/condition_variable_posix.cc
    src/chrome/base/synchronization/lock.cc
    src/chrome/base/synchronization/lock.h
    src/chrome/base/synchronization/lock_impl.h
    src/chrome/base/synchronization/lock_impl_posix.cc
    src/chrome/base/synchronization/waitable_event.h
    src/chrome/base/synchronization/waitable_event_posix.cc
    src/chrome/base/third_party/dmg_fp/dmg_fp.h
    src/chrome/base/third_party/dmg_fp/dtoa.cc
    src/chrome/base/third_party/dmg_fp/g_fmt.cc
    src/chrome/base/third_party/dynamic_annotations/dynamic_annotations.c
    src/chrome/base/third_party/dynamic_annotations/dynamic_annotations.h
    src/chrome/base/third_party/icu/icu_utf.cc
    src/chrome/base/third_party/icu/icu_utf.h
    src/chrome/base/third_party/nspr/prtime.cc
    src/chrome/base/third_party/nspr/prtime.h
    src/chrome/base/third_party/valgrind/memcheck.h
    src/chrome/base/third_party/valgrind/valgrind.h
    src/chrome/base/threading/non_thread_safe.h
    src/chrome/base/threading/non_thread_safe_impl.cc
    src/chrome/base/threading/non_thread_safe_impl.h
    src/chrome/base/threading/platform_thread.h
    src/chrome/base/threading/platform_thread_linux.cc
    src/chrome/base/threading/platform_thread_posix.cc
    src/chrome/base/threading/post_task_and_reply_impl.cc
    src/chrome/base/threading/post_task_and_reply_impl.h
    src/chrome/base/threading/sequenced_worker_pool.cc
    src/chrome/base/threading/sequenced_worker_pool.h
    src/chrome/base/threading/simple_thread.cc
    src/chrome/base/threading/simple_thread.h
    src/chrome/base/threading/thread.h
    src/chrome/base/threading/thread_checker.h
    src/chrome/base/threading/thread_checker_impl.cc
    src/chrome/base/threading/thread_checker_impl.h
    src/chrome/base/threading/thread_collision_warner.cc
    src/chrome/base/threading/thread_collision_warner.h
    src/chrome/base/threading/thread_id_name_manager.cc
    src/chrome/base/threading/thread_id_name_manager.h
    src/chrome/base/threading/thread_local.h
    src/chrome/base/threading/thread_local_posix.cc
    src/chrome/base/threading/thread_local_storage.cc
    src/chrome/base/threading/thread_local_storage.h
    src/chrome/base/threading/thread_local_storage_posix.cc
    src/chrome/base/threading/thread_restrictions.cc
    src/chrome/base/threading/thread_restrictions.h
    src/chrome/base/time/time.cc
    src/chrome/base/time/time.h
    src/chrome/base/time/time_posix.cc
    src/chrome/base/timer/timer.cc
    src/chrome/base/timer/timer.h
    src/chrome/base/at_exit.cc
    src/chrome/base/at_exit.h
    src/chrome/base/atomic_ref_count.h
    src/chrome/base/atomic_sequence_num.h
    src/chrome/base/atomicops.h
    src/chrome/base/atomicops_internals_portable.h
    src/chrome/base/atomicops_internals_x86_gcc.h
    src/chrome/base/auto_reset.h
    src/chrome/base/base_export.h
    src/chrome/base/base_paths.h
    src/chrome/base/base_paths_posix.h
    src/chrome/base/base_switches.cc
    src/chrome/base/base_switches.h
    src/chrome/base/basictypes.h
    src/chrome/base/bind.h
    src/chrome/base/bind_helpers.h
    src/chrome/base/bind_internal.h
    src/chrome/base/callback.h
    src/chrome/base/callback_forward.h
    src/chrome/base/callback_internal.cc
    src/chrome/base/callback_internal.h
    src/chrome/base/cancelable_callback.h
    src/chrome/base/command_line.cc
    src/chrome/base/command_line.h
    src/chrome/base/compiler_specific.h
    src/chrome/base/critical_closure.h
    src/chrome/base/file_descriptor_posix.h
    src/chrome/base/float_util.h
    src/chrome/base/format_macros.h
    src/chrome/base/gtest_prod_util.h
    src/chrome/base/lazy_instance.cc
    src/chrome/base/lazy_instance.h
    src/chrome/base/location.cc
    src/chrome/base/location.h
    src/chrome/base/logging.cc
    src/chrome/base/logging.h
    src/chrome/base/macros.h
    src/chrome/base/move.h
    src/chrome/base/observer_list.h
    src/chrome/base/observer_list_threadsafe.h
    src/chrome/base/path_service.h
    src/chrome/base/pending_task.cc
    src/chrome/base/pending_task.h
    src/chrome/base/pickle.cc
    src/chrome/base/pickle.h
    src/chrome/base/port.h
    src/chrome/base/rand_util.h
    src/chrome/base/run_loop.cc
    src/chrome/base/run_loop.h
    src/chrome/base/safe_strerror_posix.cc
    src/chrome/base/safe_strerror_posix.h
    src/chrome/base/scoped_clear_errno.h
    src/chrome/base/scoped_generic.h
    src/chrome/base/sequence_checker.h
    src/chrome/base/sequence_checker_impl.cc
    src/chrome/base/sequence_checker_impl.h
    src/chrome/base/sequenced_task_runner.cc
    src/chrome/base/sequenced_task_runner.h
    src/chrome/base/sequenced_task_runner_helpers.h
    src/chrome/base/single_thread_task_runner.h
    src/chrome/base/stl_util.h
    src/chrome/base/sys_byteorder.h
    src/chrome/base/sys_info.h
    src/chrome/base/sys_info_internal.h
    src/chrome/base/sys_info_posix.cc
    src/chrome/base/task_runner.cc
    src/chrome/base/task_runner.h
    src/chrome/base/template_util.h
    src/chrome/base/thread_task_runner_handle.cc
    src/chrome/base/thread_task_runner_handle.h
    src/chrome/base/tracked_objects.cc
    src/chrome/base/tracked_objects.h
    src/chrome/base/tracking_info.cc
    src/chrome/base/tracking_info.h
    src/chrome/base/tuple.h
    src/chrome/base/values.cc
    src/chrome/base/values.h
    src/chrome/base/vlog.cc
    src/chrome/base/vlog.h
    src/chrome/build/build_config.h
    src/chrome/net/base/registry_controlled_domains/registry_controlled_domain.cc
    src/chrome/net/base/registry_controlled_domains/registry_controlled_domain.h
    src/chrome/net/base/address_family.h
    src/chrome/net/base/completion_callback.h
    src/chrome/net/base/dns_util.cc
    src/chrome/net/base/dns_util.h
    src/chrome/net/base/escape.cc
    src/chrome/net/base/escape.h
    src/chrome/net/base/io_buffer.cc
    src/chrome/net/base/io_buffer.h
    src/chrome/net/base/ip_endpoint.cc
    src/chrome/net/base/ip_endpoint.h
    src/chrome/net/base/net_error_list.h
    src/chrome/net/base/net_errors.h
    src/chrome/net/base/net_errors_posix.cc
    src/chrome/net/base/net_export.h
    src/chrome/net/base/net_log.cc
    src/chrome/net/base/net_log.h
    src/chrome/net/base/net_log_event_type_list.h
    src/chrome/net/base/net_log_source_type_list.h
    src/chrome/net/base/net_module.cc
    src/chrome/net/base/net_module.h
    src/chrome/net/base/net_util.cc
    src/chrome/net/base/net_util.h
    src/chrome/net/base/network_activity_monitor.cc
    src/chrome/net/base/network_activity_monitor.h
    src/chrome/net/base/network_change_notifier.h
    src/chrome/net/base/rand_callback.h
    src/chrome/net/base/test_completion_callback.cc
    src/chrome/net/base/test_completion_callback.h
    src/chrome/net/http/http_content_disposition.h
    src/chrome/net/socket/socket.h
    src/chrome/net/socket/socket_descriptor.cc
    src/chrome/net/socket/socket_descriptor.h
    src/chrome/net/udp/datagram_client_socket.h
    src/chrome/net/udp/datagram_socket.h
    src/chrome/net/udp/udp_client_socket.cc
    src/chrome/net/udp/udp_client_socket.h
    src/chrome/net/udp/udp_net_log_parameters.cc
    src/chrome/net/udp/udp_net_log_parameters.h
    src/chrome/net/udp/udp_socket.h
    src/chrome/net/udp/udp_socket_libevent.cc
    src/chrome/net/udp/udp_socket_libevent.h
    src/chrome/out/Default/gen/net/base/registry_controlled_domains/effective_tld_names-inc.cc
    src/chrome/out/Default/gen/net/grit/net_resources.h
    src/chrome/testing/gtest/include/gtest/gtest_prod.h
    src/chrome/third_party/icu/source/common/unicode/ucnv.h
    src/chrome/third_party/icu/source/common/unicode/ucnv_cb.h
    src/chrome/third_party/icu/source/common/unicode/uidna.h
    src/chrome/third_party/libevent/linux/event-config.h
    src/chrome/third_party/libevent/event-config.h
    src/chrome/third_party/libevent/event.h
    src/chrome/url/third_party/mozilla/url_parse.cc
    src/chrome/url/third_party/mozilla/url_parse.h
    src/chrome/url/gurl.cc
    src/chrome/url/gurl.h
    src/chrome/url/url_canon.h
    src/chrome/url/url_canon_etc.cc
    src/chrome/url/url_canon_filesystemurl.cc
    src/chrome/url/url_canon_fileurl.cc
    src/chrome/url/url_canon_host.cc
    src/chrome/url/url_canon_icu.cc
    src/chrome/url/url_canon_icu.h
    src/chrome/url/url_canon_internal.cc
    src/chrome/url/url_canon_internal.h
    src/chrome/url/url_canon_ip.cc
    src/chrome/url/url_canon_ip.h
    src/chrome/url/url_canon_mailtourl.cc
    src/chrome/url/url_canon_path.cc
    src/chrome/url/url_canon_pathurl.cc
    src/chrome/url/url_canon_query.cc
    src/chrome/url/url_canon_relative.cc
    src/chrome/url/url_canon_stdstring.cc
    src/chrome/url/url_canon_stdstring.h
    src/chrome/url/url_canon_stdurl.cc
    src/chrome/url/url_constants.cc
    src/chrome/url/url_constants.h
    src/chrome/url/url_export.h
    src/chrome/url/url_file.h
    src/chrome/url/url_parse.h
    src/chrome/url/url_parse_file.cc
    src/chrome/url/url_parse_internal.h
    src/chrome/url/url_util.cc
    src/chrome/url/url_util.h
    src/chrome/url/url_util_internal.h
    src/crypto_test.cc)

add_executable(subzone ${SOURCE_FILES})

target_link_libraries(subzone pthread event icuuc)
